--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Промокоды на подписки Яндекс.Плюс и СберПрайм - promo-deals.ru</title>
+    <title>Промокоды на подписки Яндекс.Плюс и СберПрайм - deals-hub.ru</title>
     <meta name="description" content="Купить промокоды на Яндекс.Плюс и СберПрайм со скидкой до 70%. Мгновенная доставка промокодов на email. Лучшие цены на подписки.">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
@@ -35,7 +35,7 @@
         <div class="container mx-auto px-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <i class="fas fa-tags text-2xl"></i>
-                <h1 class="text-2xl font-bold">promo-deals.ru</h1>
+                <h1 class="text-2xl font-bold">deals-hub.ru</h1>
             </div>
             <nav class="hidden md:flex space-x-6">
                 <a href="#yandex-plus" class="hover:text-yellow-300 transition-colors">Яндекс.Плюс</a>
@@ -322,7 +322,7 @@
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="font-semibold mb-4">promo-deals.ru</h3>
+                    <h3 class="font-semibold mb-4">deals-hub.ru</h3>
                     <p class="text-gray-400 text-sm">
                         Надежный источник промокодов на популярные подписки по выгодным ценам.
                     </p>
@@ -352,7 +352,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400 text-sm">
-                <p>&copy; 2025 promo-deals.ru. Все права защищены.</p>
+                <p>&copy; 2025 deals-hub.ru. Все права защищены.</p>
             </div>
         </div>
     </footer>
