--- a/yandex-plus/kak-aktivirovat-promocod/index.html
+++ b/yandex-plus/kak-aktivirovat-promocod/index.html
@@ -234,9 +234,12 @@
                             <div class="code-block">
                                 https://plus.yandex.ru/gift
                             </div>
-                            <div class="screenshot-placeholder mt-4">
-                                <i class="fas fa-image mr-2"></i>Скриншот: Страница активации промокодов (обновлено август 2025)
-                            </div>
+                            <<div class="screenshot-container mt-4">
+    <img src="/images/yandex-plus-aktivaciya-promocoda-august-2025.jpg" 
+         alt="Страница активации промокодов Яндекс Плюс plus.yandex.ru/gift - актуальный интерфейс август 2025" 
+         class="screenshot w-full h-auto border border-gray-300 rounded-lg shadow-md">
+    <p class="text-sm text-gray-600 mt-2 text-center italic">Страница активации промокодов (обновлено 26 августа 2025)</p>
+</div>
                         </div>
                     </div>
                 </div>
@@ -268,9 +271,12 @@
                                     Промокод чувствителен к регистру. Вводите точно как указано, включая цифры и буквы.
                                 </p>
                             </div>
-                            <div class="screenshot-placeholder mt-4">
-                                <i class="fas fa-image mr-2"></i>Скриншот: Поле ввода промокода (интерфейс август 2025)
-                            </div>
+                            <div class="screenshot-container mt-4">
+    <img src="/images/pole-vvoda-promocoda-yandex-plus-august-2025.jpg" 
+         alt="Поле ввода промокода Яндекс Плюс - как правильно вводить промокод в августе 2025" 
+         class="screenshot w-full h-auto border border-gray-300 rounded-lg shadow-md">
+    <p class="text-sm text-gray-600 mt-2 text-center italic">Поле ввода промокода (интерфейс август 2025)</p>
+</div>
                         </div>
                     </div>
                 </div>
@@ -306,9 +312,12 @@
                             <li>6. Нажмите "Применить промокод"</li>
                         </ol>
                     </div>
-                    <div class="screenshot-placeholder">
-                        <i class="fas fa-image mr-2"></i>Скриншот: Альтернативный путь активации
-                    </div>
+                    <div class="screenshot-container">
+    <img src="/images/alternativnyj-put-aktivacii-yandex-plus-2025.jpg" 
+         alt="Альтернативный способ активации промокода Яндекс Плюс через настройки подписки" 
+         class="screenshot w-full h-auto border border-gray-300 rounded-lg shadow-md">
+    <p class="text-sm text-gray-600 mt-2 text-center italic">Альтернативный путь активации через настройки</p>
+</div>
                 </div>
             </div>
         </section>
